@@ -1,3 +1,6 @@
+2003-12-09	blytkerchan
+	* language.html: new file
+
 2003-10-05	blytkerchan
 	* development.html: new file
 	* table.html: add link to development.html
